--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,16 +1,14 @@
-repository_type: pipeline
-
-nf_core_version: 3.3.1
-
 lint: {}
-
+nf_core_version: 3.3.1
+repository_type: pipeline
 template:
-  org: nf-core
-  name: hadge
-  description: Comprehensive pipeline for donor demultiplexing in single cell
   author: Fabiola Curion
-  version: 1.0.0dev
-  force: true
-  outdir: .
-  skip_features: []
+  description: Comprehensive pipeline for donor demultiplexing in single cell
+  force: false
   is_nfcore: true
+  name: hadge
+  org: nf-core
+  outdir: .
+  skip_features:
+    - fastqc
+  version: 1.0.0dev
